--- a/contacts.html
+++ b/contacts.html
@@ -2,6 +2,7 @@
 <html lang="it">
     <head>
         <title>Contatti</title>
+	<meta name="viewport" content="width=decive-width, initial-scale=1.0">
         <link rel="stylesheet" media="screen and (min-width: 900px)" href="CSS\contacts-style-big-screen.css"> <!-- Schermo Grande -->
         <link rel="stylesheet" media="screen and (max-width: 600px)" href="CSS\contacts-style-small-screen.css"> <!-- Schermo Piccolo -->
     </head>
