--- a/ricette.html
+++ b/ricette.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Meraviglie Italiane</title>
+    <meta name="viewport" content="width=decive-width, initial-scale=1.0">
     <link rel="stylesheet" media="screen and (min-width: 900px)" href="CSS\ricette-style-big-screen.css"> <!-- Schermo Grande -->
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="CSS\ricette-style-small-screen.css"> <!-- Schermo Piccolo -->
 </head>
